Fixed Scroll height gap

--- a/ghc-store/src/components/ProductDetail.css
+++ b/ghc-store/src/components/ProductDetail.css
@@ -1,6 +1,5 @@
 .product-details {
     overflow-y: scroll;
-    height: 100vh; 
   }
   
   .product-details::-webkit-scrollbar {
